--- a/HCPBridgeESP32/WebUI/webpage/index.html
+++ b/HCPBridgeESP32/WebUI/webpage/index.html
@@ -7,7 +7,7 @@
   <style>
     html {font-family: Arial; display: inline-block; text-align: center;}
     h2 {font-size: 3.0rem;}
-    p {font-size: 3.0rem;}
+    p {font-size: 1rem;}
     body {max-width: 600px; margin:0px auto; padding-bottom: 25px;}
     .switch {position: relative; display: inline-block; width: 80px; height: 48px} 
     .switch input {display: none}
@@ -358,6 +358,8 @@
 		<a class="link-gray" href="update" target="_blank">OTA Update</a>
 		<a class="link-gray" href="sysinfo" target="_blank">System Info</a>
 		<a class="link-gray" href="status" target="_blank">Door status</a>
+
+		<p id="swversion"></p>
 	</div>
 
 		
@@ -533,6 +535,7 @@
                 isconnected = status.valid;
 				document.getElementById("status").innerHTML = getStatusText(status.valid?status.doorstate:"NA");
 				document.getElementById("light").checked = status.light & status.valid;
+				document.getElementById("swversion").innerHTML = "Version " + status.swversion;
 				if (status.hasOwnProperty('sensors')) {
 					var sdiv = document.getElementById("sensors")
 					sdiv.style.display = 'flex';
